--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -219,7 +219,11 @@ main {
   background-color: rgba(255, 255, 255, 0.434);
   padding: 5px;
 }
-
+.reservation .errorReservationMessage {
+  color: #ed1245;
+  font-size: 1.5rem;
+  margin-top: 50px;
+}
 .reservation button {
   background-color: #ed1245;
   color: white;
